<resources>
    <string name="app_name">Mars Rover</string>

    <string name="crash_activity_message">An unexpected error has occurred. Sorry for the inconvenience.</string>
    <string name="crash_activity_restart_button">RESTART APP</string>
    <string name="crash_activity_logcat_button">LOGCAT</string>
    <string name="crash_activity_clipboard_button">COPY TO CLIPBOARD</string>
    <string name="crash_activity_snackbar_successful_title">Copied</string>
    <string name="crash_activity_snackbar_successful_action">OKAY</string>

    <string name="unknown_error">Unknown error</string>
    <string name="retry">Retry</string>

    <string name="top_right_corner_title">Add top right corner:</string>
    <string name="rover_initial_position_title">Add the Rover initial position:</string>
    <string name="rover_initial_direction_title">Add the Rover initial direction:</string>
    <string name="rover_movements_title">Add the Rover movements:</string>
    <string name="x_coordinate_hint">X coordinate</string>
    <string name="y_coordinate_hint">Y coordinate</string>
    <string name="direction_hint">Direction</string>
    <string name="movements_hint">Movements</string>
    <string name="direction_helper">One of the four cardinal points</string>
    <string name="movements_helper">L and R to move 90º and M to move one grid</string>
    <string name="send">Send</string>
    <string name="empty_error">Can\'t be empty</string>
    <string name="outside_error">Must be the same or smaller than the topRight</string>
    <string name="cardinal_error">Must be one of the four cardinal points: N E S W</string>
    <string name="movement_error">Can only contains L, R and M</string>

    <string name="ok">OK</string>
    <string name="result">The result of the Mars Rover is: %s</string>
</resources>
